--- a/etc/hosts/localdev.ini
+++ b/etc/hosts/localdev.ini
@@ -16,6 +16,8 @@ dev
 dev
 
 [all:vars]
-domain      = argonbook.local
-working_dir = /home/vagrant/argonbook
-phpdev      = yes
+domain            = argonbook.local
+working_dir       = /home/vagrant/argonbook
+phpdev            = yes
+mysql_memory_perc = 0.4
+php_memory_limit  = 512M
