--- a/etc/roles/httpd/handlers/main.yml
+++ b/etc/roles/httpd/handlers/main.yml
@@ -1,4 +1,4 @@
 ---
 
-- name: restart lighttpd
-  service: name=lighttpd state=restarted
+- name: restart nginx
+  service: name=nginx state=restarted
