--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -71,3 +71,12 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+# FOSUser Configuration
+fos_user:
+    db_driver:       orm
+    firewall_name:   main
+    user_class:      ArgonBundle\Entity\Player
+    from_email:
+        address:     no-reply@argonbook.eu
+        sender_name: Argonbook
