--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,8 +4,8 @@ security:
 
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory:
-            memory: ~
+        fos_userbundle:
+            id: fos_user.user_provider.username_email
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -14,16 +14,30 @@ security:
             security: false
 
         main:
-            anonymous: ~
-            # activate different ways to authenticate
+            pattern: ^/
+            form_login:
+                provider: fos_userbundle
+                csrf_token_generator: security.csrf.token_manager
 
-            # http_basic: ~
-            # http://symfony.com/doc/current/book/security.html#a-configuring-how-your-users-will-authenticate
-
-            # form_login: ~
-            # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
+            logout:       true
+            anonymous:    true
 
     encoders:
+        FOS\UserBundle\Model\UserInterface:
+            algorithm: bcrypt
+            cost: 12
         Symfony\Component\Security\Core\User\User:
             algorithm: bcrypt
             cost: 12
+
+    role_hierarchy:
+        ROLE_CHARACTER:   []
+        ROLE_PLAYER:      [ROLE_ALLOWED_TO_SWITCH_CHARACTER]
+        ROLE_DIRECTOR:    [ROLE_PLAYER]
+        ROLE_GM:          [ROLE_PLAYER, ROLE_DIRECTOR]
+        ROLE_WM:          [ROLE_PLAYER, ROLE_DIRECTOR, ROLE_GM, ROLE_ALLOWED_TO_SWITCH]
+
+    access_control:
+        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
