--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,2 +1,6 @@
+argon:
+    resource: "@ArgonBundle/Controller/"
+    type:     annotation
+
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
