--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -64,6 +64,13 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
 
+# Assetic Configuration
+assetic:
+    debug:          "%kernel.debug%"
+    use_controller: "%kernel.debug%"
+    filters:
+        scss:       ~
+
 # Swiftmailer Configuration
 swiftmailer:
     transport: "%mailer_transport%"
