Move become to inventory

--- a/etc/hosts/localdev.ini
+++ b/etc/hosts/localdev.ini
@@ -7,7 +7,7 @@
 # vagrant ssh-config | sed 's/Host default/Host argonbook.local/' >> ~/.ssh/config
 
 [dev]
-argonbook.local ansible_ssh_user=vagrant
+argonbook.local ansible_ssh_user=vagrant ansible_become=yes
 
 [db:children]
 dev
@@ -19,5 +19,5 @@ dev
 domain            = argonbook.local
 working_dir       = /home/vagrant/argonbook
 phpdev            = yes
-mysql_memory_perc = 0.4
 php_memory_limit  = 512M
+mysql_memory_perc = 0.4
