--- a/etc/hosts/localdev.ini
+++ b/etc/hosts/localdev.ini
@@ -16,6 +16,7 @@ dev
 dev
 
 [all:vars]
+packages          = ['git', 'ruby-sass']
 domain            = argonbook.local
 working_dir       = /home/vagrant/argonbook
 phpdev            = yes
