Include normalize.css

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,6 +69,7 @@ assetic:
     debug:          "%kernel.debug%"
     use_controller: "%kernel.debug%"
     filters:
+        cssrewrite: ~
         scss:       ~
 
 # Swiftmailer Configuration
