Basic header with zass

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -70,7 +70,8 @@ assetic:
     use_controller: "%kernel.debug%"
     filters:
         cssrewrite: ~
-        scss:       ~
+        scss:
+            load_paths: ["%kernel.root_dir%/../vendor"]
 
 # Swiftmailer Configuration
 swiftmailer:
