--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -41,4 +41,4 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/playerlist, role: ROLE_PLAYER }
+        - { path: ^/admin, roles: ROLE_SUPER_ADMIN }
