--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -11,6 +11,10 @@ _argon_user_admin:
     resource: "@ArgonUserBundle/Resources/config/routing/admin.xml"
     prefix: /admin
 
+_argon_news_admin:
+    resource: "@ArgonNewsBundle/Resources/config/routing/admin.xml"
+    prefix: /admin
+
 # FOSUserBundle
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
