--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "doctrine/doctrine-fixtures-bundle": "^2.3",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "knplabs/knp-paginator-bundle": "^2.5",
+        "stof/doctrine-extensions-bundle": "^1.2",
         "necolas/normalize.css": "^4.1",
         "waiting-for-dev/zass": "dev-master"
     },
