--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -15,6 +15,10 @@ _argon_news_admin:
     resource: "@ArgonNewsBundle/Resources/config/routing/admin.xml"
     prefix: /admin
 
+_argon_game_admin:
+    resource: "@ArgonGameBundle/Resources/config/routing/admin.xml"
+    prefix: /admin
+
 # FOSUserBundle
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
