--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
-    "name": "vagrant/test",
-    "license": "proprietary",
+    "name": "abenteuerritter/argonbook",
+    "license": "MIT",
     "type": "project",
+    "description": "Alternate Reality Games Oriented Network",
     "autoload": {
         "psr-4": {
             "": "src/"
@@ -44,6 +45,7 @@
             "type": "package",
             "package": {
                 "name": "necolas/normalize.css",
+                "license": "MIT",
                 "version": "4.1.1",
                 "dist": {
                     "type": "zip",
@@ -60,6 +62,7 @@
             "type": "package",
             "package": {
                 "name": "waiting-for-dev/zass",
+                "license": "LGPL-3.0",
                 "version": "dev-master",
                 "dist": {
                     "type": "zip",
