--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -6,6 +6,8 @@ security:
     providers:
         fos_userbundle:
             id: fos_user.user_provider.username_email
+        argon_game_character:
+            id: argon_game.security.character_provider
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -21,6 +23,11 @@ security:
 
             logout:       true
             anonymous:    true
+
+            switch_user:
+                provider:  argon_game_character
+                parameter: _switch
+                role:      ROLE_ALLOWED_TO_SWITCH_CHARACTER
 
     encoders:
         FOS\UserBundle\Model\UserInterface:
@@ -38,7 +45,10 @@ security:
         ROLE_SUPER_ADMIN: [ROLE_PLAYER, ROLE_DIRECTOR, ROLE_GAMEMASTER, ROLE_ALLOWED_TO_SWITCH]
 
     access_control:
-        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY, methods: [GET] }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/characters$, role: ROLE_PLAYER, methods: [GET] }
+        - { path: ^/character/\w+\:\w+/, role: ROLE_PLAYER }
+        - { path: ^/new, role: ROLE_PLAYER }
         - { path: ^/admin, roles: ROLE_SUPER_ADMIN }
