--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "knplabs/knp-paginator-bundle": "^2.5",
         "stof/doctrine-extensions-bundle": "^1.2",
         "necolas/normalize.css": "^4.1",
+        "capua/sass-utils": "dev-master",
         "waiting-for-dev/zass": "dev-master"
     },
     "require-dev": {
@@ -61,16 +62,33 @@
         {
             "type": "package",
             "package": {
+                "name": "capua/sass-utils",
+                "license": "MIT",
+                "version": "dev-master",
+                "dist": {
+                    "type": "zip",
+                    "url": "https://github.com/capua/sass-utils/archive/master.zip"
+                },
+                "source": {
+                    "type": "git",
+                    "url": "https://github.com/capua/sass-utils.git",
+                    "reference": "master"
+                }
+            }
+        },
+        {
+            "type": "package",
+            "package": {
                 "name": "waiting-for-dev/zass",
                 "license": "LGPL-3.0",
                 "version": "dev-master",
                 "dist": {
                     "type": "zip",
-                    "url": "https://github.com/waiting-for-dev/zass/zipball/master"
+                    "url": "https://github.com/waiting-for-dev/zass/archive/master.zip"
                 },
                 "source": {
                     "type": "git",
-                    "url": "https://github.com/waiting-for-dev/zass",
+                    "url": "https://github.com/waiting-for-dev/zass.git",
                     "reference": "master"
                 }
             }
