--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -49,6 +49,6 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/characters$, role: ROLE_PLAYER, methods: [GET] }
-        - { path: ^/character/\w+\:\w+/, role: ROLE_PLAYER }
+        - { path: ^/character/[-\w]+\:[-\w]+/, role: ROLE_PLAYER }
         - { path: ^/new, role: ROLE_PLAYER }
         - { path: ^/admin, roles: ROLE_SUPER_ADMIN }
