--- a/etc/hosts/localdev.ini
+++ b/etc/hosts/localdev.ini
@@ -16,9 +16,10 @@ dev
 dev
 
 [all:vars]
-packages          = ['git', 'ruby-sass']
-domain            = argonbook.local
-working_dir       = /home/vagrant/argonbook
-phpdev            = yes
-php_memory_limit  = 512M
-mysql_memory_perc = 0.4
+packages           = ['git']
+domain             = argonbook.local
+working_dir        = /home/vagrant/argonbook
+environment        = dev
+php_extensions_fpm = ['xdebug']
+php_memory_limit   = 512M
+mysql_memory_perc  = 0.4
