Use npm to track frontend

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -82,7 +82,7 @@ assetic:
     filters:
         cssrewrite: ~
         scss:
-            load_paths: ["%kernel.root_dir%/../vendor"]
+            load_paths: ["%kernel.root_dir%/../node_modules/"]
 
 # Swiftmailer Configuration
 swiftmailer:
