--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,7 @@
         "doctrine/doctrine-fixtures-bundle": "^2.3",
         "stof/doctrine-extensions-bundle": "^1.2",
         "friendsofsymfony/user-bundle": "^2.0@dev",
-        "knplabs/knp-paginator-bundle": "^2.5",
-        "twbs/bootstrap": "^2.0@dev"
+        "knplabs/knp-paginator-bundle": "^2.5"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^3.0"
