--- a/etc/hosts/localdev.ini
+++ b/etc/hosts/localdev.ini
@@ -4,7 +4,7 @@
 # This inventory uses the vagrant machine as target host. To configure it run
 # in the project's root directory::
 #
-# vagrant ssh-config | sed 's/Host default/Host argonbook.local/' >> ~/.ssh/config
+# vagrant ssh-config >> ~/.ssh/config
 
 [dev]
 argonbook.local ansible_ssh_user=vagrant ansible_become=yes
