--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "argonbook",
   "license": "MIT",
   "dependencies": {
+    "foundation-sites": "^6.2",
     "gulp": "^3.9",
-    "gulp-sass": "^2.3",
-    "foundation-sites": "^6.2"
+    "gulp-concat": "^2.6.0",
+    "gulp-sass": "^2.3"
   }
 }
