--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -38,11 +38,12 @@ security:
             cost: 12
 
     role_hierarchy:
-        ROLE_CHARACTER:   []
+        ROLE_PJ:          []
         ROLE_PLAYER:      [ROLE_ALLOWED_TO_SWITCH_CHARACTER]
-        ROLE_DIRECTOR:    [ROLE_PLAYER]
-        ROLE_GAMEMASTER:  [ROLE_PLAYER, ROLE_DIRECTOR]
-        ROLE_SUPER_ADMIN: [ROLE_PLAYER, ROLE_DIRECTOR, ROLE_GAMEMASTER, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_USER:        [ROLE_PLAYER]
+        ROLE_DIRECTOR:    [ROLE_USER]
+        ROLE_GAMEMASTER:  [ROLE_USER, ROLE_DIRECTOR]
+        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_DIRECTOR, ROLE_GAMEMASTER, ROLE_ALLOWED_TO_SWITCH]
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY, methods: [GET] }
