--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "dependencies": {
     "foundation-sites": "^6.2",
     "gulp": "^3.9",
-    "gulp-concat": "^2.6.0",
-    "gulp-sass": "^2.3"
+    "gulp-concat": "^2.6",
+    "gulp-sass": "^2.3",
+    "jquery": "^2.2",
+    "sortablejs": "^1.4"
   }
 }
