--- a/etc/hosts/localdev.ini
+++ b/etc/hosts/localdev.ini
@@ -20,3 +20,4 @@ packages           = ['git']
 domain             = argonbook.local
 working_dir        = /home/vagrant/argonbook
 php_memory_limit   = 512M
+db                 = argonbook
