--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -12,3 +12,27 @@ services:
         alias: fos_user.user_provider.username_email
     security.user.provider.concrete.argon:
         alias: argon_game.security.character_provider
+
+    fos_message.driver:
+        class: FOS\Message\Driver\Doctrine\ORM\DoctrineORMDriver
+        arguments: ["@doctrine.orm.entity_manager"]
+
+    fos_message.repository:
+        class: FOS\Message\Repository
+        arguments: ["@fos_message.driver"]
+
+    fos_message.event_dispatcher:
+        class: FOS\Message\EventDispatcher\SymfonyBridgeEventDispatcher
+        arguments: ["@event_dispatcher"]
+
+    fos_message.tagger:
+        class: FOS\Message\Tagger
+        arguments:
+            - "@fos_message.driver"
+            - "@fos_message.repository"
+
+    fos_message.sender:
+        class: FOS\Message\Sender
+        arguments:
+            - "@fos_message.driver"
+            - "@fos_message.event_dispatcher"
