--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "stof/doctrine-extensions-bundle": "^1.2",
         "friendsofsymfony/user-bundle": "^2.0@dev",
         "friendsofsymfony/message": "^1.0@dev",
-        "knplabs/knp-paginator-bundle": "^2.5"
+        "knplabs/knp-paginator-bundle": "^2.5",
+        "cebe/markdown": "^1.1"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^3.0"
