Include foundation layout

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -41,6 +41,8 @@ twig:
     strict_variables: "%kernel.debug%"
     globals:
         project:      "%project%"
+    form_themes:
+        - "foundation_5_layout.html.twig"
 
 # Doctrine Configuration
 doctrine:
