InnoDB memory usage

--- a/etc/hosts/localdev.ini
+++ b/etc/hosts/localdev.ini
@@ -16,8 +16,9 @@ dev
 dev
 
 [all:vars]
-packages           = ['git']
-domain             = argonbook.local
-working_dir        = /home/vagrant/argonbook
-php_memory_limit   = 512M
-db                 = argonbook
+packages            = ['git']
+domain              = argonbook.local
+working_dir         = /home/vagrant/argonbook
+php_memory_limit    = 392M
+db_buffer_pool_size = 392M
+db                  = argonbook
