Deprecate ansible_ssh_user

--- a/etc/hosts/argonbook.ini
+++ b/etc/hosts/argonbook.ini
@@ -6,9 +6,10 @@ argonbook.eu
 [web]
 argonbook.eu
 
-[dev]
-argonbook.local ansible_ssh_user=vagrant
+[build]
+argonbook.local
 
 [all:vars]
+user                = argonbook
 domain              = argonbook.eu
 db                  = argonbook
