--- a/etc/hosts/localdev.ini
+++ b/etc/hosts/localdev.ini
@@ -7,15 +7,19 @@
 # vagrant ssh-config >> ~/.ssh/config
 
 [dev]
-argonbook.local ansible_ssh_user=vagrant ansible_become=yes
+argonbook.local
 
-[db:children]
-dev
+[build]
+argonbook.local
 
-[web:children]
-dev
+[db]
+argonbook.local ansible_become=yes
+
+[web]
+argonbook.local ansible_become=yes
 
 [all:vars]
+user                = vagrant
 packages            = ['git']
 domain              = argonbook.local
 db                  = argonbook
