Become in provision

--- a/etc/hosts/localdev.ini
+++ b/etc/hosts/localdev.ini
@@ -13,10 +13,10 @@ argonbook.local
 argonbook.local
 
 [db]
-argonbook.local ansible_become=yes
+argonbook.local
 
 [web]
-argonbook.local ansible_become=yes
+argonbook.local
 
 [all:vars]
 user                = vagrant
